--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
 
-        //No Argument but Return
+        //No Argument but Retur
         const side = 8;
         function areaofbox1() {
             const area1 = side * side;
